# surface_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
equivolumetric_surfaces/: generate_equivolumetric_surfaces.py  io_mesh.py
equivolumetric_surfaces/images/: equi_euclid_surfaces.tiff
surface_tools/equivolumetric_surfaces/: generate_equivolumetric_surfaces.py
